Implementado o regex para busca por por nome ou titulo ignorar acentos, documentação atualizada e refatoração no modelo de usuários, vídeos e categorias
